--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hiển thị Bảng Google Sheet</title>
+    <title>Vàng bạc Hùng Hạ</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <script type="importmap">
 {
   "imports": {
@@ -15,6 +18,10 @@
   }
 }
 </script>
+    <style>
+      body { font-family: 'Roboto', sans-serif; }
+      .font-heading { font-family: 'Playfair Display', serif; }
+    </style>
   <link rel="stylesheet" href="/index.css">
 </head>
   <body>
